# halo2-intro

./: Cargo.toml  README.md  cmd.sh  proof
src/: e2e_example.rs  equal_or_not.rs  example3.rs  lib.rs
